iniciandoo tamanho randômico dos mosquitos

--- a/app.html
+++ b/app.html
@@ -12,7 +12,7 @@
     <body onresize="adjustStage()">
     
         <script>
-            randomPosition()
+            randomicPosition()
         </script>
 
 
