removendo mosquito e criando um novo a cada 1 seg

--- a/app.html
+++ b/app.html
@@ -12,7 +12,11 @@
     <body onresize="adjustStage()">
     
         <script>
-            randomicPosition()
+            
+
+            setInterval(function(){
+                randomicPosition()
+            },1000)
         </script>
 
 
