--- a/app.html
+++ b/app.html
@@ -10,10 +10,20 @@
 
 </head>
     <body onresize="adjustStage()">
+
+        <div class="painel">
+            <div class="vida">
+                <img src="./img/coracao_vazio.png" alt="">
+                <img src="./img/coracao_cheio.png" alt="">
+                <img src="./img/coracao_cheio.png" alt="">
+            </div>
+
+            <div class="cronometro">
+                Tempo restante: ?
+            </div>
+        </div>
     
         <script>
-            
-
             setInterval(function(){
                 randomicPosition()
             },1000)
