implementado a lógica do decremento de vidas

--- a/app.html
+++ b/app.html
@@ -13,9 +13,9 @@
 
         <div class="painel">
             <div class="vida">
-                <img src="./img/coracao_vazio.png" alt="">
-                <img src="./img/coracao_cheio.png" alt="">
-                <img src="./img/coracao_cheio.png" alt="">
+                <img id="v1" src="./img/coracao_cheio.png" alt="">
+                <img id="v2" src="./img/coracao_cheio.png" alt="">
+                <img id="v3" src="./img/coracao_cheio.png" alt="">
             </div>
 
             <div class="cronometro">
@@ -26,7 +26,7 @@
         <script>
             setInterval(function(){
                 randomicPosition()
-            },1000)
+            },2000)
         </script>
 
 
