adicionando cronometro, não acabado

--- a/app.html
+++ b/app.html
@@ -19,11 +19,12 @@
             </div>
 
             <div class="cronometro">
-                Tempo restante: ?
+                Tempo restante: <span id="cronometro"></span>
             </div>
         </div>
     
         <script>
+            document.getElementById('cronometro').innerHTML = tempo
             setInterval(function(){
                 randomicPosition()
             },2000)
