--- a/app.html
+++ b/app.html
@@ -25,7 +25,7 @@
     
         <script>
             document.getElementById('cronometro').innerHTML = tempo
-            setInterval(function(){
+            var criaMosquito =  setInterval(function(){
                 randomicPosition()
             },2000)
         </script>
