--- a/app.html
+++ b/app.html
@@ -27,7 +27,7 @@
             document.getElementById('cronometro').innerHTML = tempo
             var criaMosquito =  setInterval(function(){
                 randomicPosition()
-            },2000)
+            },criaMosquitoTempo)
         </script>
 
 
